Refatoring Gantt Design(Done)

--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -101,7 +101,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         {% include "dashboards/subjects_other_indicators.html" %}
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 graph-container">
-            <div align="left" style="font-size:22px; color: #878787; padding-top: 0px; ">{% trans 'My Essential Tasks'%}</div>
+            <div align="left" style="font-size:22px; color: #878787; padding-top: 0px; ">{% trans 'Your Essential Tasks'%}</div>
             <hr style="height:3px; background-color:#878787; margin-top: 5px;">
 
             {% include "dashboards/subjects_gantt.html" %}
