--- a/dashboards/templates/dashboards/subjects_cloudy.html
+++ b/dashboards/templates/dashboards/subjects_cloudy.html
@@ -45,10 +45,10 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     <div id="cloudy" style="padding: 0px">
 
     </div>
-    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-legend">
+    <!--<div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-legend">
         <i class="fa fa-text-height icon-cloudy-legend" aria-hidden="true"></i><p class="text-indicators-legend">{% trans 'Class accesses' %}</p>
         <div class="icon-cloudy-legend" style="background-image: linear-gradient(to right, #00441B , rgb(183, 226, 177)); "></div><p class="text-indicators-legend">{% trans 'Your accesses' %}</p>
-    </div>
+    </div>-->
 </div>
 
 <div class="modal fade" id="tagModal" tabindex="-1" role="dialog" aria-labelledby="modalTittle" aria-hidden="true">
