--- a/dashboards/templates/dashboards/subjects_gantt.html
+++ b/dashboards/templates/dashboards/subjects_gantt.html
@@ -110,7 +110,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Positions all activities suggested by the teacher on the current subject in a timeline' %}"></i>
         </div>
         <div style="float:right">
-            {% trans '(%)Class' %}
+            {% trans '(%) Class' %}
             <label class="switch">
                 <input id="ganttPercent" type="checkbox" name="percentOn" checked onclick="invertPercent()">
                 <span class="slider round"></span>
@@ -170,7 +170,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 percent_min: 0.3,
                 percent_text:'{% trans " % already accomplish" %}',
                 buttonAccess_text:'{% trans "ACCESS TASK" %}',      
-                buttonDoTask_text:'{% trans "DO THE TASK" %}',
+                buttonDoTask_text:'{% trans "DO TASK" %}',
                 initDate_text:'{% trans "Start: " %}',
                 endDate_text:'{% trans "End: " %}',
                 closedDate_text:'{% trans "Closed on: " %}',
