--- a/dashboards/templates/dashboards/subjects_other_indicators.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators.html
@@ -137,7 +137,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         //d3.select("#indicators_loading_ball").transition().duration(300).style("opacity", "0");
         d3.select("#indicators_loading_ball").style("display", "none")
             //.transition().delay(300)
-            //.remove();
+            .remove();
 
         var indicators_container = d3.select("#indicators-accordion")
             //.transition().delay(300)
